--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SI2</string>
+    <string name="iniciar_sesion">Iniciar Sesion</string>
+    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña</string>
+    <string name="contrase_a">Contraseña</string>
 </resources>
